# ClionProjects

Algoritmos e Complexidade/Grafos e Representação/: conversion.c  tarjan.c  traversals.c
Algoritmos e Complexidade/hashing/: CMakeLists.txt  hashing.h  main.c
Algoritmos e Complexidade/minheap/: minheap.c
Laboratorios de Algoritmia I/Ficha1/: CMakeLists.txt  primeiraficha.c
Laboratorios de Algoritmia I/Ficha2/: CMakeLists.txt  ficha2.c
Laboratorios de Algoritmia I/Ficha3/: CMakeLists.txt  ficha3.1.3.c
Laboratorios de Algoritmia I/Ficha4/: CMakeLists.txt  ficha4.3.2.2.c
Laboratorios de Algoritmia I/Trabalho/PAsta/: CMakeLists.txt
Lixo/: CMakeLists.txt
Lixo/CCPL2G05-main/: CMakeLists.txt  array.c  parser.c  parser.h  stack.c  stack.h  strtok.c  strtok.h
Lixo/donutengraçoso/: CMakeLists.txt
PI 2020-2021/100 questoes/: CMakeLists.txt  main.c
PI 2020-2021/50questoes/: CMakeLists.txt  main.c
PI 2020-2021/Aulas/: Aulas.c  CMakeLists.txt
PI 2020-2021/AulasT/: CMakeLists.txt  main.c
PI 2020-2021/Ficha1/: CMakeLists.txt  primeira.c
PI 2020-2021/Ficha2/: CMakeLists.txt  main.c
PI 2020-2021/Ficha5/: CMakeLists.txt  main.c
PI 2020-2021/Ficha6/: CMakeLists.txt  Queue.c  Queue.h  Stack.c  Stack.h  main.c
PI 2020-2021/Ficha7/: CMakeLists.txt  main.c
PI 2020-2021/Ficha8/: CMakeLists.txt  Deque.c  Deque.h  Listas.h  Queue.c  Queue.h  Stack.c  main.c
PI 2020-2021/TP/: CMakeLists.txt  main.c
PI 2020-2021/Teste/: CMakeLists.txt
PI 2021-2022/50Qs/: 50Qs.c  CMakeLists.txt
PI 2021-2022/Ficha1/: CMakeLists.txt  main.c
PI 2021-2022/Ficha2/: main.c
PI 2021-2022/Ficha5/: Alunos.c  Alunos.h
PI 2021-2022/Primeiro miniteste/: CMakeLists.txt  main.c
PI 2021-2022/TreinoParaOTeste/: CMakeLists.txt
PROJETO-CG-MIGUEL-e-NEIVA--main/: README.md  bezier.cpp
PROJETO-CG-MIGUEL-e-NEIVA--main/funcaocone/: CMakeLists.txt  main.cpp
PROJETO-CG-MIGUEL-e-NEIVA--main/generator/: CMakeLists.txt  Coordinates3D.cpp  cone.cpp  main.cpp  myprogram  plane&cube.cpp  plane.3d  sphere.3d  sphere.cpp
PROJETO-CG-MIGUEL-e-NEIVA--main/include/: Coordinates3D.h
ProjetoSOjoaoversion/projeto/: MakeFile
Sistemas Operativos 2022/Aula1/: mycp.c
Sistemas Operativos 2022/Aula3/: main.c
Sistemas Operativos 2022/Exemplosdetrabalho/grupo-47/: CMakeLists.txt
Sistemas Operativos/Aula1/: CMakeLists.txt
TrabalhoSO/: CMakeLists.txt  server.c
(+124 files in other folders)
